# phong-shading

./: CMakeLists.txt  README.md
include/: loadobj.h  shader.h
src/: glad.c  loadobj.cpp  main.cpp  shader.cpp
src/shader/: cooktorrance-fragment.fs  cooktorrance-vertex.vs  gouraud-fragment.fs  gouraud-vertex.vs  phong-fragment.fs
